--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,103 @@
-.App {
-  text-align: center;
+.swal2-input {
+  font-size: 2.5em !important;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-app {
   display: flex;
-  /* flex-direction: row; */
   flex-wrap: wrap;
-  align-items: center;
+  margin: 5px 10px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 1em;
+  background: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.hdr_img {
+  margin-top: 5px;
+  text-align: right;
+  border-radius: 50%;
+  background: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.hdr_img img {
+  width: 300px;
+  height: 150px;
+  border-radius: 1em;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.hdr_nombre {
+  /* flex: 2; */
+  /* width: 500px; */
+  height: 100%;
+  background: #fff;
+  color: #1c100c;  
+  display: flex;  
+}
+
+.hdr_nombre p{  
+  font-family: "Monoton", cursive;
+  text-align: left;
+  font-weight: 600;  
+  /* padding-left: 10px; */
+  font-size: 4em;
+}
+
+.saludo {
+  width: 100%;
+  padding-left: 10px;
+  color: #94c11f;
+}
+.prb {
+  font-size: 1.5em;
+  background: transparent;
+  font-family: "Monoton", cursive;
+  color: #1c100c;
+  padding-left: 15px;
+}
+
+.nombre {
+  font-size: 2.5em !important;
+  padding-left: 90px;
+  color: #ec8223;
+}
+
+@media only screen and (max-width: 767px) {
+  .hdr_nombre,
+  .hdr_img,
+  .header{
+    font-size: 2em;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    text-align: center;    
   }
-  to {
-    transform: rotate(360deg);
+
+  .hdr_nombre p {
+    text-align: center;
+    font-size: 1.5em;    
+    background: linear-gradient(to left, #ec8223 40%, #94c11f 40%);
+    -webkit-background-clip: text;
+    color: transparent;
   }
+}
+
+.body-App {  
+  background: #1c100c;
+  margin: 5px 10px;  
+}
+
+.body-App_btns_nuevos {
+  display: flex;
+  flex-wrap: wrap;
+  background: #fff;  
+  width: 100%;
+  padding: 15px;
+  border-radius: 1em;
+}
+
+.btns_mas {
+  width: 270px;  
+  background: transparent;
 }
